--- a/index.html
+++ b/index.html
@@ -19,56 +19,57 @@
         </nav>
     </header>
     <main>
-        <section id="login-section">
-            <h2>Login</h2>
+        <div id="grid-container">
+            <section id="login-section">
+                <h2>Login</h2>
 
-            <form action="/">
-                <label for="email">Email:</label><br>
-                <input type="email" id="email" name="email"><br>
-                <label for="password">Password:</label><br>
-                <input type="password" id="password" name="password"><br>
-                <input type="submit" value="Submit">
-              </form>
-        </section>
-        <section id="categories">
-            <h2>Categories</h2>
-            <ul>
-                <li><a href ="/">Latest</a></li>
-                <li><a href ="/">Local</a></li>
-                <li><a href ="/">Politics</a></li>
-                <li><a href ="/">Sports</a></li>
-            </ul>
-        </section>
+                <form action="/">
+                    <label for="email">Email:</label><br>
+                    <input type="email" id="email" name="email"><br>
+                    <label for="password">Password:</label><br>
+                    <input type="password" id="password" name="password"><br>
+                    <input type="submit" value="Submit">
+                </form>
+            </section>
+            <section id="categories">
+                <h2>Categories</h2>
+                <ul>
+                    <li><a href ="/">Latest</a></li>
+                    <li><a href ="/">Local</a></li>
+                    <li><a href ="/">Politics</a></li>
+                    <li><a href ="/">Sports</a></li>
+                </ul>
+            </section>
 
-        <section id="latest">
-            <h2>Latest</h2>
-            <h3>Breaking News</h3>
+            <section id="latest">
+                <h2>Latest</h2>
+                <h3>Breaking News</h3>
 
-            <div class="story">
-                <img src="missing-image.png" alt="Pic from the story">
-                <div>
-                    <h4>Story Headline</h4>
-                    <p>This is the first line of the article.  The user would be able to click on the preview to read more...</p>
+                <div class="story">
+                    <img src="missing-image.png" alt="Pic from the story">
+                    <div>
+                        <h4>Story Headline</h4>
+                        <p>This is the first line of the article.  The user would be able to click on the preview to read more...</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="story">
-                <img src="missing-image.png" alt="Pic from the story">
-                <div>
-                    <h4>Story Headline</h4>
-                    <p>This is the first line of the article.  The user would be able to click on the preview to read more...</p>
+                <div class="story">
+                    <img src="missing-image.png" alt="Pic from the story">
+                    <div>
+                        <h4>Story Headline</h4>
+                        <p>This is the first line of the article.  The user would be able to click on the preview to read more...</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="story">
-                <img src="missing-image.png" alt="Pic from the story">
-                <div>
-                    <h4>Story Headline</h4>
-                    <p>This is the first line of the article.  The user would be able to click on the preview to read more...</p>
+                <div class="story">
+                    <img src="missing-image.png" alt="Pic from the story">
+                    <div>
+                        <h4>Story Headline</h4>
+                        <p>This is the first line of the article.  The user would be able to click on the preview to read more...</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-
+            </section>
+        </div>
         <article>
             <h2>Main Article Headline</h2>
             <h3>Author Name</h3>
